--- a/homepage.html
+++ b/homepage.html
@@ -1,12 +1,90 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
-    <title>{{homePageTitle}}</title>
-</head>
-<body>
-    
-</body>
+<html lang="hb">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>{{homepageTitle}}</title>
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet"> -->
+    <link rel="stylesheet" href="css/main.css">
+    <script defer src="https://use.fontawesome.com/releases/v5.8.2/js/all.js"></script>
+  </head>
+  <body class="body-rtl">
+    <section class="top-nav">
+      <div class="container">
+        <div class="columns is-centered">
+          <div class="column is-9">
+            <div class="columns is-vcentered">
+              <div class="column is-one-third has-text-right">
+                <button class="is-link is-light button is-small">עברית</button>
+                <span> &nbsp; </span>
+                <button class="is-link is-light button is-small">English</button>
+              </div>
+              <div class="column is-one-third  has-text-centered"><img src="assets/logo.webp"></div>
+              <div class="column is-one-third has-text-left">
+                <a class="social-link grey" href="/" target="_blank"><i class="fab fa-facebook-square"></i></a>
+                <a href="/" class="social-link grey" target="_blank"><i class="fab fa-linkedin"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="is-section-primary">
+      <div class="container">
+        <div class="columns is-centered">
+          <div class="column is-9">
+            <div class="level">
+              <div class="level-right">
+                <div class="level-item is-block">
+                  <h2 class="is-primary">הגיע הזמן</h2>
+                  <h1 class="is-primary">למצוא שפה משותפת<br>עם קהל היעד שלכם</h1>
+                </div>
+              </div>
+              <div class="level-left">
+                <div class="level-item">
+                  <img src="assets/undraw_group_chat_v059.webp" >
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section>
+      <div class="container">
+        <div class="columns is-centered">
+          <div class="column is-9">
+            odifvjodijv
+            dfvjdsfv
+            dlfvjd
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer class="footer has-text-centered">
+      <div class="container">
+         <div class="columns">
+          <div class="column is-8-desktop is-offset-2-desktop">
+            <p>
+              <strong class="has-text-weight-semibold">
+                <a href="https://www.npmjs.com/package/bulma-start">bulma-start@0.0.4</a>
+              </strong>
+            </p>
+            <p>
+              <small>
+                Source code licensed <a href="http://opensource.org/licenses/mit-license.php">MIT</a>
+              </small>
+            </p>
+            <p style="margin-top: 1rem;">
+              <a href="http://bulma.io">
+                <img src="made-with-bulma.png" alt="Made with Bulma" width="128" height="24">
+              </a>
+            </p>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <script type="text/javascript" src="lib/main.js"></script>
+  </body>
 </html>
